[tool.poetry]
name = "python-design-patterns"
version = "0.1.0"
description = ""
authors = ["Pedro Calleja <pecalleja@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pre-commit = "^2.7.1"
pytest = "^6.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
